namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-for-computate
spec: {}
