generated.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: example-for-computate
  name: example-for-computate
spec: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example-for-computate
  name: web
  namespace: example-for-computate
spec:
  ports:
  - port: 8080
  selector:
    app: example-for-computate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example-for-computate
  name: web
  namespace: example-for-computate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-for-computate
  template:
    metadata:
      labels:
        app: example-for-computate
    spec:
      containers:
      - env:
        - name: WHOAMI_PORT_NUMBER
          value: "8080"
        image: docker.io/traefik/whoami:latest
        name: whoami
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: example-for-computate
  name: web
  namespace: example-for-computate
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: web
